views: fix Safari stretching logos in admin procedures list

--- a/app/assets/stylesheets/new_design/admin-procedures-list.scss
+++ b/app/assets/stylesheets/new_design/admin-procedures-list.scss
@@ -2,3 +2,10 @@
 .admin-procedures-list-timestamps {
   margin-left: auto;
 }
+
+// Fix a Safari flexbox bug where the inner procedure logo
+// would stretch the container vertically.
+// See https://stackoverflow.com/questions/57516373/image-stretching-in-flexbox-in-safari
+.admin-procedures-list-row.infos {
+  align-items: flex-start;
+}
